--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
+:root {
+  --primary-color: #00e8c7;
+  --secondary-color: #222;
+  --accent-color: #fff;
+
+  --poppins: "Poppins", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*,
+*::after,
+*::before {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: "poppins";
+  font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+li {
+  list-style: none;
+}
+
+/* custom classes */
+
+.font-poppins {
+  font-family: var(--poppins);
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+.bold {
+  font-weight: bold;
+}
+.colorize {
+  color: var(--primary-color);
+}
+.section-title {
+  padding: 0.6rem 1rem;
+  background: #f8f8f8;
+  border-radius: 4px;
+  margin: 1rem 0rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+.section-title div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.section-title div span {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
 }
